--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -49,30 +49,6 @@ jobs:
         run: |
           echo "SHA7=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-  trivy-analyze-config:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run Trivy vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@0.30.0
-        with:
-          scan-type: "config"
-          # ignore-unfixed: true
-          exit-code: "0"
-          hide-progress: false
-          format: "sarif"
-          output: "trivy-results-config.sarif"
-          severity: "CRITICAL,HIGH"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: "trivy-results-config.sarif"
-
   trivy:
     needs: [ git-sha7 ]
     permissions:
@@ -83,28 +59,51 @@ jobs:
     strategy:
       fail-fast: false # continue scanning other images although if the other has been vulnerable
       matrix:
-        image: [ edc-controlplane-kafka, edc-dataplane-kafka ]
+        image:
+          - edc-controlplane-kafka
+          - edc-dataplane-kafka
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        ## This step will fail if the docker images is not found
-      - name: "Check if image exists"
-        id: imageCheck
-        run: |
-          docker buildx imagetools inspect --format '{{ json . }}' ds-awahl/${{ matrix.image }}:sha-${{ needs.git-sha7.outputs.value }}
-        continue-on-error: true
-
-        ## the next two steps will only execute if the image exists check was successful
-      - name: Run Trivy vulnerability scanner
-        if: success() && steps.imageCheck.outcome != 'failure'
-        uses: aquasecurity/trivy-action@0.30.0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          image-ref: "tractusx/${{ matrix.image }}:sha-${{ needs.git-sha7.outputs.value }}"
-          format: "sarif"
-          output: "trivy-results-${{ matrix.image }}.sarif"
-          exit-code: "0"
+          distribution: temurin
+          java-version: 17
+
+      - name: Build JARs
+        run: ./gradlew clean build -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build ${{ matrix.image }} image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          # If you keep separate Dockerfiles, point to them here:
+          # file: docker/${{ matrix.image }}.Dockerfile
+          tags: local/${{ matrix.image }}:${{ github.sha }}
+          load: true
+
+      - name: Trivy config scan (repository)
+        uses: aquasecurity/trivy-action@0.29.0
+        with:
+          scan-type: fs
+          scan-ref: .
+          hide-progress: true
+
+      - name: Trivy image scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: local/${{ matrix.image }}:${{ github.sha }}
+          format: sarif
+          output: trivy-${{ matrix.image }}.sarif
           severity: "CRITICAL,HIGH"
-          timeout: "10m0s"
+          trivyignores: .config/.trivyignore
+          limit-severities-for-sarif: true
+
       - name: Upload Trivy scan results to GitHub Security tab
         if: success() && steps.imageCheck.outcome != 'failure'
         uses: github/codeql-action/upload-sarif@v3
