--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -45,6 +45,19 @@ jobs:
       # 1. Check out your source so the runner can build the image
       - uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: gradle
+
+      - name: Build image with Gradle Jib
+        working-directory: PoC
+        run: |
+          ./gradlew jibDockerBuild \
+            -Djib.to.image=local-image:${{ github.sha }}
+
       # 2. Build a *local* Docker image and tag it with the commit SHA
       - name: Build Docker image
         working-directory: PoC
