update trivy workflow

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -52,6 +52,10 @@ jobs:
           java-version: 17
           cache: gradle
 
+      - name: Build fat-JAR
+        working-directory: PoC
+        run: ./gradlew shadowJar --no-daemon
+
       - name: Build docker image
         run: |
           docker build \
