Update trivy workflow

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -65,6 +65,7 @@ jobs:
           ls
 
       - name: Build docker image
+        working-directory: PoC/runtimes/edc/controlplane-local
         run: |
           docker build \
           -f PoC/runtimes/edc/controlplane-local/Dockerfile \
