Update codeql workflow

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -81,6 +81,7 @@ jobs:
 
       - name: Build Production Code
         run: |
+          cd PoC
           ./gradlew compileJava --no-daemon
 
       - name: Perform CodeQL Analysis
