--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -1,3 +1,23 @@
+#################################################################################
+#  Copyright (c) 2025 Contributors to the Eclipse Foundation
+#
+#  See the NOTICE file(s) distributed with this work for additional
+#  information regarding copyright ownership.
+#
+#  This program and the accompanying materials are made available under the
+#  terms of the Apache License, Version 2.0 which is available at
+#  https://www.apache.org/licenses/LICENSE-2.0.
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+#  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+#  License for the specific language governing permissions and limitations
+#  under the License.
+#
+#  SPDX-License-Identifier: Apache-2.0
+#################################################################################
+
+
 name: Sonar Scan
 
 on:
@@ -65,13 +85,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      #      - name: Cache maven packages
-      #        uses: actions/cache@v4
-      #        with:
-      #          path: ~/.m2
-      #          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-      #          restore-keys: ${{ runner.os }}-m2
+          cache: gradle
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
