--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -20,6 +20,11 @@
 
 name: Sonar Scan
 
+env:
+  # Setting an environment variable with the value of a configuration variable
+  sonar_project_key: ${{ vars.SONAR_PROJECT_KEY }}
+  sonar_organization: ${{ vars.SONAR_ORGANIZATION }}
+
 on:
   workflow_dispatch: # Trigger manually
   pull_request:
@@ -63,7 +68,7 @@ jobs:
         run: |
           echo "Checking if sonar is configured: ${{ env.SONAR_CONFIGURED }}"
     env:
-      SONAR_CONFIGURED: ${{ secrets.SONAR_TOKEN != '' && secrets.SONAR_PROJECT_KEY != '' && secrets.SONAR_ORGANIZATION != '' }}
+      SONAR_CONFIGURED: ${{ secrets.SONAR_TOKEN != '' && sonar_project_key != '' && sonar_organization != '' }}
     outputs:
       sonar_configured: ${{ env.SONAR_CONFIGURED }}
 
