--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -20,11 +20,6 @@
 
 name: Sonar Scan
 
-env:
-  # Setting an environment variable with the value of a configuration variable
-  sonar_project_key: ${{ vars.SONAR_PROJECT_KEY }}
-  sonar_organization: ${{ vars.SONAR_ORGANIZATION }}
-
 on:
   workflow_dispatch: # Trigger manually
   pull_request:
@@ -68,7 +63,7 @@ jobs:
         run: |
           echo "Checking if sonar is configured: ${{ env.SONAR_CONFIGURED }}"
     env:
-      SONAR_CONFIGURED: ${{ secrets.SONAR_TOKEN != '' && env.sonar_project_key != '' && env.sonar_organization != '' }}
+      SONAR_CONFIGURED: ${{ secrets.SONAR_TOKEN != '' && vars.SONAR_PROJECT_KEY != '' && vars.SONAR_ORGANIZATION != '' }}
     outputs:
       sonar_configured: ${{ env.SONAR_CONFIGURED }}
 
@@ -106,5 +101,5 @@ jobs:
         run: |
           mvn --batch-mode --update-snapshots verify \
           org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-          -Dsonar.projectKey=${{ env.sonar_project_key }} -Dsonar.organization=${{ env.sonar_organization }} \
+          -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }} \
           -Dcheckstyle.skip -Dpmd.skip=true
