--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -105,9 +105,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          # --no-daemon keeps CI logs shorter; drop it if you prefer the daemon
-          ./gradlew --no-daemon build sonar \
-            -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.token=$SONAR_TOKEN \
-            -Dcheckstyle.skip=true -Dpmd.skip=true
+          mvn --batch-mode --update-snapshots verify \
+          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+          -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} 
+          -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }} \
+          -Dsonar.token=$SONAR_TOKEN \
+          -Dcheckstyle.skip -Dpmd.skip=true
