chore: change env to var in sonar workflow (#47)
* Change to vars

* Update sonar workflow

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -20,11 +20,6 @@
 
 name: Sonar Scan
 
-env:
-  # Setting an environment variable with the value of a configuration variable
-  sonar_project_key: ${{ vars.SONAR_PROJECT_KEY }}
-  sonar_organization: ${{ vars.SONAR_ORGANIZATION }}
-
 on:
   workflow_dispatch: # Trigger manually
   pull_request:
@@ -64,11 +59,16 @@ jobs:
   check_sonar_configured:
     runs-on: ubuntu-latest
     steps:
+      - name: Show whether each SONAR variable is set
+        run: |
+          echo "SONAR_TOKEN present?        ${{ secrets.SONAR_TOKEN     != '' }}"
+          echo "SONAR_PROJECT_KEY present? ${{ vars.SONAR_PROJECT_KEY  != '' }}"
+          echo "SONAR_ORGANIZATION present? ${{ vars.SONAR_ORGANIZATION != '' }}"
       - name: check_sonar_configured
         run: |
           echo "Checking if sonar is configured: ${{ env.SONAR_CONFIGURED }}"
     env:
-      SONAR_CONFIGURED: ${{ secrets.SONAR_TOKEN != '' && env.sonar_project_key != '' && env.sonar_organization != '' }}
+      SONAR_CONFIGURED: ${{ secrets.SONAR_TOKEN != '' && vars.SONAR_PROJECT_KEY != '' && vars.SONAR_ORGANIZATION != '' }}
     outputs:
       sonar_configured: ${{ env.SONAR_CONFIGURED }}
 
@@ -99,12 +99,15 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Analyze with Sonar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+      - name: Build & analyze with Sonar
+        working-directory: poc
+        env: # SONAR_TOKEN stays masked in the log
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn --batch-mode --update-snapshots verify \
-          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-          -Dsonar.projectKey=${{ env.sonar_project_key }} -Dsonar.organization=${{ env.sonar_organization }} \
-          -Dcheckstyle.skip -Dpmd.skip=true
+          # --no-daemon keeps CI logs shorter; drop it if you prefer the daemon
+          ./gradlew --no-daemon build sonar \
+            -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.token=$SONAR_TOKEN \
+            -Dcheckstyle.skip=true -Dpmd.skip=true
