Update sonar workflow

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -108,6 +108,7 @@ jobs:
           # --no-daemon keeps CI logs shorter; drop it if you prefer the daemon
           ./gradlew --no-daemon build sonar \
             -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} \
+            -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }} \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=$SONAR_TOKEN \
             -Dcheckstyle.skip=true -Dpmd.skip=true
