Add jacoco test coverage to sonar

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -101,9 +101,10 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           # --no-daemon keeps CI logs shorter; drop it if you prefer the daemon
-          ./gradlew --no-daemon build sonar \
+          ./gradlew --no-daemon build testCodeCoverageReport sonar \
             -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} \
             -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }} \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=$SONAR_TOKEN \
-            -Dcheckstyle.skip=true -Dpmd.skip=true
+            -Dcheckstyle.skip=true -Dpmd.skip=true \
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml
