--- a/charts/consumer-app/Chart.yaml
+++ b/charts/consumer-app/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: edc-kafka-demo
-description: A Helm chart for Kubernetes
+name: consumer-app
+description: A Helm chart for the Kafka Consumer application
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -21,33 +21,13 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
-dependencies:
-  # Provider Side
-  - name: kafka
-    version: 32.3.7
-    repository: https://charts.bitnami.com/bitnami
-    condition: kafka.enabled
-  - name: keycloak
-    version: 24.8.0
-    repository: https://charts.bitnami.com/bitnami
-    condition: keycloak.enabled
-  - name: producer-app
-    version: 0.1.0
-    repository: file://../producer-app
-    condition: producer-app.enabled
-  - name: tractusx-edc-kafka
-    alias: producer-edc
-    version: 0.1.0
-    repository: file://../tractusx-edc-kafka
-    condition: tractusx-edc-kafka.enabled
-  # Consumer Side
-  - name: consumer-app
-    version: 0.1.0
-    repository: file://../consumer-app
-    condition: consumer-app.enabled
-  - name: tractusx-edc-kafka
-    alias: consumer-edc
-    version: 0.1.0
-    repository: file://../tractusx-edc-kafka
-    condition: tractusx-edc-kafka.enabled
+appVersion: "1.0.0"
+
+keywords:
+  - kafka
+  - consumer
+  - tractusx
+
+home: https://github.com/eclipse-tractusx/tractusx-edc-kafka-extension
+sources:
+  - https://github.com/eclipse-tractusx/tractusx-edc-kafka-extension
