--- a/charts/producer-app/templates/secret.yaml
+++ b/charts/producer-app/templates/secret.yaml
@@ -7,11 +7,11 @@ metadata:
     {{- include "producer-app.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- if .Values.secrets.keycloakClientSecret }}
-  keycloak-client-secret: {{ .Values.secrets.keycloakClientSecret | b64enc | quote }}
+  {{- if .Values.secrets.oauth2ClientSecret }}
+  oauth2-client-secret: {{ .Values.secrets.oauth2ClientSecret | b64enc | quote }}
   {{- end }}
-  {{- if .Values.secrets.vaultClientSecretKey }}
-  vault-client-secret-key: {{ .Values.secrets.vaultClientSecretKey | b64enc | quote }}
+  {{- if .Values.secrets.clientSecretVaultKey }}
+  client-secret-vault-key: {{ .Values.secrets.clientSecretVaultKey | b64enc | quote }}
   {{- end }}
   {{- if .Values.secrets.edcApiAuthKey }}
   edc-api-auth-key: {{ .Values.secrets.edcApiAuthKey | b64enc | quote }}
